Basic setup without any animations or barriers

--- a/HugosBreakoutGame/Base.lproj/Main.storyboard
+++ b/HugosBreakoutGame/Base.lproj/Main.storyboard
@@ -1,25 +1,152 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6751" systemVersion="13F1066" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="oor-n6-loQ">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6736"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Breakout Game-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="BreakoutViewController" customModule="HugosBreakoutGame" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="64" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8zO-Gl-b1I">
+                                <rect key="frame" x="16" y="56" width="568" height="487"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <gestureRecognizers/>
+                                <connections>
+                                    <outletCollection property="gestureRecognizers" destination="GLb-Pg-3EG" appends="YES" id="fLt-KB-NK8"/>
+                                </connections>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="8zO-Gl-b1I" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="Ch5-rS-De9"/>
+                            <constraint firstItem="y3c-jy-aDJ" firstAttribute="bottom" secondItem="8zO-Gl-b1I" secondAttribute="top" constant="8" symbolic="YES" id="V4r-Mi-64A"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="8zO-Gl-b1I" secondAttribute="bottom" constant="8" symbolic="YES" id="WAx-8p-0Vn"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="8zO-Gl-b1I" secondAttribute="trailing" id="vLk-zO-BJ0"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" title="Breakout Game" id="CxY-SO-3lu"/>
+                    <connections>
+                        <outlet property="gameView" destination="8zO-Gl-b1I" id="ZtW-Aa-TvI"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="GLb-Pg-3EG">
+                    <connections>
+                        <action selector="ball:" destination="BYZ-38-t0r" id="mfs-Lk-ahH"/>
+                    </connections>
+                </tapGestureRecognizer>
             </objects>
+            <point key="canvasLocation" x="1633" y="136"/>
+        </scene>
+        <!--Settings-->
+        <scene sceneID="DaW-Mz-947">
+            <objects>
+                <tableViewController id="IQQ-0T-ViK" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="dJz-Ic-CbQ">
+                        <rect key="frame" x="0.0" y="64" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <sections>
+                            <tableViewSection headerTitle="First Section" id="zru-gu-DYg">
+                                <cells>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="d2F-YC-n4r">
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="d2F-YC-n4r" id="V7o-7C-QFh">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="0tM-H4-MAs">
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="0tM-H4-MAs" id="67P-0W-Rtw">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="tfC-dy-Ij2">
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="tfC-dy-Ij2" id="23Q-6P-S1M">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </cells>
+                            </tableViewSection>
+                        </sections>
+                        <connections>
+                            <outlet property="dataSource" destination="IQQ-0T-ViK" id="IFJ-OG-wvg"/>
+                            <outlet property="delegate" destination="IQQ-0T-ViK" id="jQ0-Ap-QhV"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Settings" id="TeM-dx-ihH"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="2xM-nP-HAT" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1763" y="881"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="7q0-uu-Bam">
+            <objects>
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="oor-n6-loQ" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <nil key="simulatedBottomBarMetrics"/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="Hbe-b7-L7g">
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="Sib-9H-dET" kind="relationship" relationship="viewControllers" id="64p-HP-pd7"/>
+                        <segue destination="ySw-2X-M4w" kind="relationship" relationship="viewControllers" id="FE6-m4-aH0"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="3E3-bf-aDe" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="139" y="136"/>
+        </scene>
+        <!--Breakout-->
+        <scene sceneID="zfe-WI-i8c">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Sib-9H-dET" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Breakout" id="soa-Ih-B4u"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="6O4-eu-yqW">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="wWU-oa-P5U"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="mxq-2g-hhg" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="951" y="136"/>
+        </scene>
+        <!--Settings-->
+        <scene sceneID="Ltg-hT-6Z5">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="ySw-2X-M4w" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Settings" id="amE-cz-p8S"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="hhb-ic-nNb">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="IQQ-0T-ViK" kind="relationship" relationship="rootViewController" id="Ip2-sB-lEQ"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="tNL-vJ-Xe5" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="951" y="881"/>
         </scene>
     </scenes>
 </document>
