--- a/HugosBreakoutGame/Base.lproj/Main.storyboard
+++ b/HugosBreakoutGame/Base.lproj/Main.storyboard
@@ -18,11 +18,12 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8zO-Gl-b1I" customClass="BezierPathsView" customModule="HugosBreakoutGame" customModuleProvider="target">
-                                <rect key="frame" x="16" y="56" width="568" height="487"/>
+                                <rect key="frame" x="16" y="56" width="568" height="495"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <gestureRecognizers/>
                                 <connections>
                                     <outletCollection property="gestureRecognizers" destination="GLb-Pg-3EG" appends="YES" id="fLt-KB-NK8"/>
+                                    <outletCollection property="gestureRecognizers" destination="vtJ-D6-L9H" appends="YES" id="vax-hb-P6y"/>
                                 </connections>
                             </view>
                         </subviews>
@@ -30,7 +31,7 @@
                         <constraints>
                             <constraint firstItem="8zO-Gl-b1I" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="Ch5-rS-De9"/>
                             <constraint firstItem="y3c-jy-aDJ" firstAttribute="bottom" secondItem="8zO-Gl-b1I" secondAttribute="top" constant="8" symbolic="YES" id="V4r-Mi-64A"/>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="8zO-Gl-b1I" secondAttribute="bottom" constant="8" symbolic="YES" id="WAx-8p-0Vn"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="8zO-Gl-b1I" secondAttribute="bottom" id="WAx-8p-0Vn"/>
                             <constraint firstAttribute="trailingMargin" secondItem="8zO-Gl-b1I" secondAttribute="trailing" id="vLk-zO-BJ0"/>
                         </constraints>
                     </view>
@@ -45,6 +46,11 @@
                         <action selector="ball:" destination="BYZ-38-t0r" id="mfs-Lk-ahH"/>
                     </connections>
                 </tapGestureRecognizer>
+                <panGestureRecognizer minimumNumberOfTouches="1" id="vtJ-D6-L9H">
+                    <connections>
+                        <action selector="paddle:" destination="BYZ-38-t0r" id="Dw6-RX-VGT"/>
+                    </connections>
+                </panGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="1633" y="136"/>
         </scene>
@@ -79,7 +85,7 @@
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Add gravity" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aT2-Sf-c35">
                                                     <rect key="frame" x="8" y="12.5" width="85" height="19.5"/>
                                                     <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
-                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="acQ-gm-bxi">
@@ -105,7 +111,7 @@
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Push Magnitude" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="W49-vF-DHS">
                                                     <rect key="frame" x="8" y="8" width="121.5" height="19.5"/>
                                                     <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
-                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="10" minValue="1" maxValue="25" translatesAutoresizingMaskIntoConstraints="NO" id="6tU-Dj-F59">
@@ -117,7 +123,7 @@
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="10.0" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yrw-xc-lr0">
                                                     <rect key="frame" x="560" y="8" width="31.5" height="19.5"/>
                                                     <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
-                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
@@ -174,7 +180,7 @@
         <scene sceneID="zfe-WI-i8c">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Sib-9H-dET" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Breakout" id="soa-Ih-B4u"/>
+                    <tabBarItem key="tabBarItem" title="Breakout" image="breakout" id="soa-Ih-B4u"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="6O4-eu-yqW">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
@@ -193,7 +199,7 @@
         <scene sceneID="Ltg-hT-6Z5">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="ySw-2X-M4w" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Settings" id="amE-cz-p8S"/>
+                    <tabBarItem key="tabBarItem" title="Settings" image="settings" id="amE-cz-p8S"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="hhb-ic-nNb">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
@@ -209,4 +215,8 @@
             <point key="canvasLocation" x="951" y="881"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="breakout" width="25" height="25"/>
+        <image name="settings" width="25" height="25"/>
+    </resources>
 </document>
